2004-01-25  Michael Meeks  <michael@ximian.com>

	* bonobo/*.c: add #include "config.h"s where they
	were missing - thanks to Morten.

2004-01-23  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-dock-band.h : Use the  G_TYPE macros in place of
	  GTK_CHECK
	* bonobo/bonobo-dock-item-grip.h : ditto.
	* bonobo/bonobo-dock-item.h : ditto.
	* bonobo/bonobo-dock-layout.h : ditto.
	* bonobo/bonobo-dock.h : ditto.

	* bonobo/bonobo-dock-band.c : Port to G_DEFINE_TYPE in place of
	  GNOME_CLASS_BOILERPLATE
	* bonobo/bonobo-dock-item-grip.c : ditto.
	* bonobo/bonobo-dock-item.c : ditto.
	* bonobo/bonobo-dock.c : ditto.

	* configure.in  : bump gobject req to 2.3.2 to enable the use of
	  G_DEFINE_TYPE

2004-01-21  Fernando Herrera  <fherrera@onirica.com>

	* bonobo/bonobo-ui-init-gtk.c: Remove gxid-host and gxid-port 
	from POPT_ARGs (they are not supported on gtk 2.3)

2004-01-15  Michael Meeks  <michael@ximian.com>

	* Version 2.5.2

2004-01-15  Jason Leach  <leach@wam.umd.edu>

	* configure.in: require gtk2 >= 2.3.1

2004-01-14  Albert Chin-A-Young  <china@thewrittenword.com>

	* bonobo/bonobo-dock-item.h, bonobo/bonobo-dock-band.h,
	bonobo/bonobo-dock.h: fix (signed) enum bitfields

	* bonobo/bonobo-canvas-item.c: fix trailing comma in enum.

	* bonobo/bonobo-ui-util.c (read_four_bytes): bin bogus const.

2004-01-12  Sergey V. Udaltsov  <sergey.oudaltsov@clients.ie>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_xml_set_image):
	handle image loading with a defined size for svg artwork.

2004-01-07  Alexander Larsson  <alexl@redhat.com>

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_build): 
	Handle the pack-start behaviour attribute

2004-01-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c
	(has_item_to_the_right): add to deal with pack-end fun.
	(impl_bonobo_ui_sync_status_state): upd. logic.

2003-12-30  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Ahem,