@@ -24,9 +24,13 @@
 #include <string.h>
 #include <gdk/gdkkeysyms.h>
 #include <gtk/gtk.h>
-#include <bonobo/bonobo-dock.h>
-#include <bonobo/bonobo-dock-band.h>
-#include <bonobo/bonobo-dock-item.h>
+#include <libgnome/gnome-macros.h>
+#include "bonobo-dock.h"
+#include "bonobo-dock-band.h"
+#include "bonobo-dock-item.h"
+
+GNOME_CLASS_BOILERPLATE (BonoboDockBand, bonobo_dock_band,
+			 GtkContainer, GTK_TYPE_CONTAINER);
 
 #define noBONOBO_DOCK_BAND_DEBUG
 
@@ -123,8 +127,6 @@ static gboolean check_guint_arg               (GObject *object,
 					       const gchar *name,
 					       guint *value_return);
 
-G_DEFINE_TYPE (BonoboDockBand, bonobo_dock_band, GTK_TYPE_CONTAINER)
-
 static void
 bonobo_dock_band_class_init (BonoboDockBandClass *klass)
 {
@@ -149,7 +151,7 @@ bonobo_dock_band_class_init (BonoboDockBandClass *klass)
 }
 
 static void
-bonobo_dock_band_init (BonoboDockBand *band)
+bonobo_dock_band_instance_init (BonoboDockBand *band)
 {
   GtkWidget *widget = GTK_WIDGET (band);
 
@@ -538,7 +540,7 @@ bonobo_dock_band_map (GtkWidget *widget)
   g_return_if_fail(widget != NULL);
   g_return_if_fail(BONOBO_IS_DOCK_BAND(widget));
 
-  GTK_WIDGET_CLASS (parent_class)->map (widget);
+  GNOME_CALL_PARENT (GTK_WIDGET_CLASS, map, (widget));
 
   for (lp = band->children; lp != NULL; lp = lp->next)
     {
@@ -559,7 +561,7 @@ bonobo_dock_band_unmap (GtkWidget *widget)
   g_return_if_fail(widget != NULL);
   g_return_if_fail(BONOBO_IS_DOCK_BAND(widget));
 
-  GTK_WIDGET_CLASS (parent_class)->unmap (widget);
+  GNOME_CALL_PARENT (GTK_WIDGET_CLASS, unmap, (widget));
 
   for (lp = band->children; lp != NULL; lp = lp->next)
     {
@@ -656,7 +658,7 @@ bonobo_dock_band_finalize (GObject *object)
   g_free (self->_priv);
   self->_priv = NULL;
 
-  G_OBJECT_CLASS (parent_class)->finalize (object);
+  GNOME_CALL_PARENT (G_OBJECT_CLASS, finalize, (object));
 }
 
 
@@ -1914,8 +1916,8 @@ get_dock (GtkWidget *widget)
 
 gint
 _bonobo_dock_band_handle_key_nav (BonoboDockBand *band,
-				 BonoboDockItem *item,
-				 GdkEventKey    *event)
+				  BonoboDockItem *item,
+				  GdkEventKey    *event)
 {
   gboolean handled = FALSE;
 
@@ -1977,4 +1979,3 @@ _bonobo_dock_band_handle_key_nav (BonoboDockBand *band,
 
   return handled;
 }
-
