@@ -9,15 +9,15 @@
  */
 
 #include "config.h"
-#include <string.h>
-#include <bonobo/bonobo-dock-item-grip.h>
-#include <bonobo/bonobo-dock-band.h>
-#include <bonobo/bonobo-a11y.h>
+#include "bonobo-a11y.h"
+#include "bonobo-dock-band.h"
+#include "bonobo-dock-item-grip.h"
 #include <glib-object.h>
 #include <atk/atkstateset.h>
 #include <gdk/gdkkeysyms.h>
 #include <gtk/gtkaccessible.h>
 #include <gtk/gtkbindings.h>
+#include <libgnome/gnome-macros.h>
 #include <glib/gi18n.h>
 #include <string.h>
 
@@ -31,7 +31,8 @@ static guint signals [LAST_SIGNAL];
 
 static AtkObjectClass *a11y_parent_class = NULL;
 
-G_DEFINE_TYPE (BonoboDockItemGrip, bonobo_dock_item_grip, GTK_TYPE_WIDGET)
+GNOME_CLASS_BOILERPLATE (BonoboDockItemGrip, bonobo_dock_item_grip,
+			 GtkWidget, GTK_TYPE_WIDGET)
 
 static gint
 bonobo_dock_item_grip_expose (GtkWidget      *widget,
@@ -267,7 +268,7 @@ bonobo_dock_item_grip_activate (BonoboDockItemGrip *grip)
 }
 
 static void
-bonobo_dock_item_grip_init (BonoboDockItemGrip *grip)
+bonobo_dock_item_grip_instance_init (BonoboDockItemGrip *grip)
 {
 /*	GTK_WIDGET_SET_FLAGS (grip, GTK_CAN_FOCUS); */
 	GTK_WIDGET_SET_FLAGS (grip, GTK_NO_WINDOW);
@@ -306,6 +307,8 @@ bonobo_dock_item_grip_class_init (BonoboDockItemGripClass *klass)
 {
 	GtkBindingSet  *binding_set;
 	GtkWidgetClass *widget_class = (GtkWidgetClass *) klass;
+
+	parent_class = g_type_class_peek_parent (klass);
 
 	widget_class->expose_event = bonobo_dock_item_grip_expose;
 	widget_class->get_accessible = bonobo_dock_item_grip_get_accessible;
